--- a/views/poslovi/novi_posao.ejs
+++ b/views/poslovi/novi_posao.ejs
@@ -124,7 +124,49 @@
 
                 <!-- Submit -->
                 <button type="submit" class="btn btn-success">Dodaj oglas</button>
-                <a href = '/svi_poslovi' class="btn btn-danger">Odustani</a>
+                <!-- Odustani -->
+                <button type="button"  data-toggle="modal" data-target="#odustaniPosao" class="btn btn-danger">Odustani</button>
+
+                    <!-- Modal za odustajanje -->
+                    <div class="modal fade text-center" id="odustaniPosao" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            
+                        <div class="modal-content bg-dark">
+                            <div class="modal-header">
+        
+                            <h5 class="modal-title" id="exampleModalLongTitle"></h5>
+                            
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true" class="text-danger">&times;</span>
+                            </button>
+                            
+                            </div>
+                            <!-- Pitanje -->
+                            <div class="modal-body">
+                                Da li ste sigurni da želite da odustanete?<br> 
+                            </div>
+                            <!-- /Pitanje -->
+
+
+        
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Odbij</button>
+                                <!-- Potvrda -->
+                                <button type="submit" class="btn btn-danger" onclick="window.history.go(-1);">Potvrdi</button>
+                                <!-- Potvrda -->
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                <!-- /Modal za odustajane -->
+
+
+
+
+
+
+
+
             </div>
         </form>
     </div>
