--- a/views/log_reg/login.ejs
+++ b/views/log_reg/login.ejs
@@ -5,6 +5,41 @@
 
 <body>
 
+    <!-- Uspesno prijavljivanje -->
+    <% if (obavestenje != '') {%>
+                    <script>
+                    $(document).ready(function() {
+                        setTimeout(function() {
+                        $('#myModal').modal('show');
+                    }, 1); // milliseconds
+                        });
+
+                     </script>
+    <%}%>
+    <!-- Uspesno prijavljivanje -->
+
+            <!-- /Modal za uspesno prijavljivanje-->
+
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                    <div class="modal-content bg-dark">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"></h5>
+                        </div>
+                        <div class="modal-body">
+                            <span class="text-success">Uspešno ste se registrovali na sajtu!</span> 
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">ok</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+            <!-- /Modal za uspesno prijavljivanje-->
+
+
+
     
     <!--Navigacija-->
     <div class="navigation fixed-top">
@@ -92,7 +127,10 @@
 
             <!-- Email -->
                 <label class>Email</label>
-                <input type="email" class="form-control center-style">
+                <input type="email" class="form-control center-style" 
+                <%if (obavestenje != '') {%> 
+                    value = <%-obavestenje.email %> autofocus
+                <%%>  <%}%>  
             <!-- /Email -->
 
             <!-- Lozinka -->
@@ -102,12 +140,13 @@
 
             <!-- Prijavi se-->
                 <button type="submit" class = 'btn btn-primary mt-3'>Uloguj se</button>
-            <!-- /Prijavi se-->    
+            <!-- /Prijavi se-->  
+            <% if(obavestenje == '') {%>  
             <br><br>
             <!-- Label za registraciju-->
-                <span>Još nemate nalog <a href = ''>registrujte se ovde!</a></span>
+                <span>Još nemate nalog <a href = '/registracija'>registrujte se ovde!</a></span>
             <!-- Label za registraciju-->
-
+            <%}%>
 
             </div>
         </form>
@@ -116,37 +155,6 @@
 
     <!-- /LogIn-->
     
-    
-  
-
-     <!-- Modal -->
-            <div class="modal fade" id="nesto" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    
-                <div class="modal-content bg-dark">
-                    <div class="modal-header">
-
-                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true" class="text-danger">&times;</span>
-                    </button>
-                    
-                    </div>
-
-                    <div class="modal-body">
-                    ...
-                    </div>
-
-                    <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-
-                    </div>
-                </div>
-
-                </div>
-            </div>
-    <!-- /Modal -->
 
 
 
