Omogićeno upisivanje korisnika u sesiji

--- a/views/log_reg/login.ejs
+++ b/views/log_reg/login.ejs
@@ -150,7 +150,7 @@
                 <label>Lozinka</label>
                 <input type="password" class="form-control center-style" name = 'lozinka'
                 <% if(greska.textLozinka != ''){%>
-                    value = '<%-greska.lozinka%>' autofocus
+                    value = '<%-greska.lozinka%>' 
                 <%}%>
                 >
             <!-- /Lozinka -->
