--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,14 @@
 
 
 <body style="margin-top: 70px;">
-    
+
+    <% if (ulogovaniKorisnik) {%>
+        <h1> U logovani korisnik postoji</h1>
+        <%-ulogovaniKorisnik.ime%>
+    <%}%>
+
+
+
     <!--Navigacija-->
     <div class="navigation fixed-top">
         <div class="container-fluid" >
